Update splash screen dan carousel schedule

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   get: ^4.6.5
   http: ^1.0.0
   shared_preferences: ^2.1.2
+  flutter_native_splash: ^2.3.1
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +58,10 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_native_splash:
+  color: "#008CB5"
+  image: assets/images/Posyandu_Logo_White.png
 
 flutter_icons:
   android: true
